# REDACTS

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  USAGE.md  __init__.py  __main__.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: bandit.yml  codacy.yml  codeql-analysis.yml  ort.yml  pip-audit.yml  scorecard.yml  semgrep.yml
audit/: __init__.py  pipeline.py
core/: __init__.py  config.py  constants.py  dependencies.py  file_utils.py  hashing.py  logging_setup.py  models.py  network_security.py  normalizers.py
dast/: Dockerfile.crawlmaze  Dockerfile.playwright  __init__.py  __main__.py  docker-compose.crawlmaze.yml  docker-compose.dast.yml  orchestrator.py  package-lock.json  package.json  playwright.config.ts  tsconfig.json  wait-for-redcap.sh
dast/helpers/: auth.ts  filesystem-snapshot.ts  index.ts  network-monitor.ts  security-assertions.ts
dast/tests/: admin-access.spec.ts  crawlmaze-coverage.spec.ts  export-report.spec.ts  upgrade-flow.spec.ts
dast/upgrade-packages/: README.md
evidence/: __init__.py  anomaly_detector.py  collector.py  manifest.py
forensics/: __init__.py  baseline_validator.py  database_forensics.py  file_analyzer.py  magika_analyzer.py  security_rules.py  security_scanner.py  tree_sitter_analyzer.py  upgrade_analyzer.py
integration/: __init__.py  repomix.py
investigation/: __init__.py  external_tools.py  investigator.py  sarif_utils.py  semgrep_adapter.py  step_protocol.py  trivy_adapter.py  yara_adapter.py
investigation/steps/: __init__.py  attack_vector_step.py  config_integrity_step.py  cwe_enrichment_step.py  external_tools_step.py  ioc_scan_step.py  (+3 more)
knowledge/: __init__.py  attack_vectors.py  cwe_database.py  ioc_database.py  mitre_mapping.py  sensitive_data.py
loaders/: __init__.py  base.py  ftp_loader.py  http_loader.py  local_loader.py  zip_loader.py
orchestration/: __init__.py  phase_protocol.py  tool_orchestrator.py
reporting/: forensic_report.py
sandbox/: __init__.py  isolation.py
tests/: __init__.py  conftest.py  test_config.py  test_constants.py  test_cwe_database.py  test_database_forensics.py  test_dependencies.py  test_evidence_collector.py  test_file_utils.py  test_hashing.py  test_legacy_scanner_phase.py  test_loaders.py  test_sarif_utils.py  test_tool_orchestrator.py  test_trivy_phase.py  test_upgrade_analyzer.py
(+11 files in other folders)
