[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "redacts"
version = "2.0.0"
description = "REDCap Arbitrary Code Threat Scan — forensic security scanner for REDCap installations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "Shehab Anwer", email = "shehab.anwer@gmail.com"},
    {name = "The Adimension", email = "atrium@theadimension.com"},
]
keywords = ["redcap", "security", "forensics", "malware", "infinitered", "healthcare", "hipaa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "chardet>=5.0.0",
    "magika>=0.6.0",
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "py7zr>=0.20.0",
    "rarfile>=4.1",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "semgrep>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/The-Adimension/REDACTS"
Issues = "https://github.com/The-Adimension/REDACTS/issues"
Documentation = "https://github.com/The-Adimension/REDACTS#readme"

[project.scripts]
redacts = "REDACTS.__main__:main"

[tool.setuptools.packages.find]
include = ["REDACTS*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-x -q"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
